--- a/src/app/pages/societe-cards/societe-cards.component.css
+++ b/src/app/pages/societe-cards/societe-cards.component.css
@@ -5,7 +5,8 @@
 }
 
 .flex-container {
+  margin-top: 3%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
 }
