--- a/src/app/pages/form-candidat/form-candidat.component.css
+++ b/src/app/pages/form-candidat/form-candidat.component.css
@@ -1,3 +1,6 @@
+
+
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700");
 :root {
   --backgroundColor: rgba(246, 241, 209);
   --colorShadeA: rgb(106, 163, 137);
@@ -6,8 +9,6 @@
   --colorShadeD: rgb(187, 232, 211);
   --colorShadeE: rgb(205, 255, 232);
 }
-
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700");
 * {
   box-sizing: border-box;
 }
@@ -101,8 +102,23 @@ button.big-button {
   border-radius: 1em;
   background: #10B4F5;
   transform-style: preserve-3d;
-  transition: all 175ms cubic-bezier(0, 0, 1, 1);
+  transition: all 175ms cubic-bezier(0, 0, 0.5, 0.5);
   text-align: center;
+}
+button.big-button:disabled{
+  background: #637177;
+  
+}
+button.big-button:disabled::before {
+  background: #637177;
+}
+button.big-button:disabled:hover {
+  background: #637177;
+  transform: translate(0, 0.0em);
+}
+
+button.big-button:disabled:hover::before {
+  transform: translate3d(0, 0.25em, -0.25em);
 }
 button.big-button::before {
   position: absolute;
@@ -116,8 +132,8 @@ button.big-button::before {
   bottom: 0;
   background: #07ABEC;
   border-radius: inherit;
-  box-shadow: 0 0 0 2px #07ABEC, 0 0.75em 0 0 #10B4F5;
-  transform: translate3d(0, 0.75em, -1em);
+  box-shadow: 0 0 0 2px #0000003d, 0 0.25em 0 0 #0000003d;
+  transform: translate3d(0, 0.25em, -0.25em);
   transition: all 175ms cubic-bezier(0, 0, 1, 1);
 }
 
@@ -128,15 +144,15 @@ button.big-button:hover {
 }
 
 button.big-button:hover::before {
-  transform: translate3d(0, 0.75em, -1em);
+  transform: translate3d(0, 0.25em, -0.25em);
 }
 
 button.big-button:active {
-  transform: translate(0em, 0.75em);
+  transform: translate(0em, 0.25em);
 }
 
 button.big-button:active::before {
-  transform: translate3d(0, 0, -1em);
+  transform: translate3d(0, 0, -0.25em);
 
   box-shadow: 0 0 0 2px #10B4F5, 0 0.25em 0 0 #07ABEC;
 
