--- a/src/app/pages/societe-cards/societe-cards.component.html
+++ b/src/app/pages/societe-cards/societe-cards.component.html
@@ -11,7 +11,7 @@
 
       <div class="card">
         <p></p>
-        <p-table #dt [value]="offres" [rows]="6" [paginator]="true" [globalFilterFields]="['exigence','genre','niveau_education','experience']"
+        <p-table #dt [value]="offres" [rows]="6" [paginator]="true" [globalFilterFields]="['exigence_emploi','genre','niveau_education','experience']"
                  [(selection)]="selectedOffre" [rowHover]="true" dataKey="id"
                  currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [showCurrentPageReport]="true">
           <ng-template pTemplate="caption">
@@ -25,18 +25,20 @@
           <ng-template pTemplate="header">
             <tr>
               <th pSortableColumn="genre">Genre <p-sortIcon field="genre"></p-sortIcon></th>
-              <th pSortableColumn="exigence">Exigences<p-sortIcon field="exigence"></p-sortIcon></th>
+              <th pSortableColumn="exigence_emploi">Exigences<p-sortIcon field="exigence_emploi"></p-sortIcon></th>
               <th pSortableColumn="niveau_education">Niveau éducation<p-sortIcon field="niveau_education"></p-sortIcon></th>
               <th pSortableColumn="experience">Experience<p-sortIcon field="experience"></p-sortIcon></th>
+              <th pSortableColumn="created_at" >Date de création<p-sortIcon field="created_at"></p-sortIcon></th>
             </tr>
           </ng-template>
           <ng-template pTemplate="body" let-emploi>
-            <tr>
+            <tr (click)="route(emploi.id)" pTooltip="Naviguer au details de l'offre" tooltipPosition="top" tooltipEvent="hover" showDelay="100" hideDelay="50">
       
               <td>{{emploi.genre}}</td>
               <td>{{emploi.exigence_emploi}}</td>
               <td>{{emploi.niveau_education}}</td>
               <td>{{emploi.experience}}</td>
+              <td>{{emploi.created_at |date:'MMM-dd hh:mm:ss' }}</td>
       
             </tr>
           </ng-template>
@@ -47,7 +49,6 @@
           </ng-template>
         </p-table>
       </div>
-
 
 
     </p-dialog>
