--- a/src/app/pages/societe-cards/societe-cards.component.html
+++ b/src/app/pages/societe-cards/societe-cards.component.html
@@ -1,6 +1,6 @@
 <div class="flex-container">
 
-<p-card header="{{i.nom_entreprise}}" subheader="{{i.site_web}}"  [style]="{width: '300px'}" styleClass="p-card-shadow" *ngFor="let i of employeurs">
+<p-card header="{{i.nom_entreprise}}" subheader="{{i.site_web}}"  [style]="{width: '300px'}" styleClass="p-card-shadow p" *ngFor="let i of employeurs">
   <ng-template pTemplate="header">
     <img alt="Card" src="https://m.media-amazon.com/images/I/51nX7PBmzIL._SS500_.jpg" width="150px">
   </ng-template>
