--- a/src/app/pages/formsociete/formsociete.component.html
+++ b/src/app/pages/formsociete/formsociete.component.html
@@ -28,7 +28,7 @@
   <div class="p-field p-col-12 p-md-6">
     <label for="code">Matricule fiscale
     </label>
-    <input id="code" type="number" pInputText aria-describedby="username-help" [(ngModel)]="employeur.matricule" name="code" #code="ngModel" required pTooltip="La matricule doit être existante" tooltipPosition="right" tooltipEvent="focus" showDelay="1000" hideDelay="500">
+    <input id="code" type="text" pInputText aria-describedby="username-help" [(ngModel)]="employeur.matricule" name="code" #code="ngModel" required pTooltip="La matricule doit être existante" tooltipPosition="right" tooltipEvent="focus" showDelay="1000" hideDelay="500">
   </div>
   <div class="p-field p-col-12 p-md-3">
     <label for="site">site web</label>
@@ -44,10 +44,16 @@
     <!--<input id="telephone" type="number" pInputText min="71000000" [(ngModel)]="employeur.telephone" name="telephone" #telephone="ngModel" required pTooltip="Le numero doit être composé de 8 chiffres" tooltipPosition="right" tooltipEvent="focus" showDelay="1000" hideDelay="500">-->
   </div>
   <div class="p-field p-col-12 p-md-3">
+    
     <label for="desc">Description Entreprise</label>
     <textarea id="desc" [rows]="1" [cols]="30" pInputTextarea autoResize="autoResize" [(ngModel)]="employeur.description_entreprise" name="desc" #desc="ngModel" required></textarea>
     <!--<input id="desc" type="text" pInputText [(ngModel)]="employeur.description_entreprise" name="desc" #desc="ngModel" required>-->
   </div>
+
+  <div class="p-field p-col-12 p-md-3">
+    <p-dropdown [options]="secteurs" [(ngModel)]="secteur" placeholder="Choisissez un secteur d'activités" name="secteur" optionLabel="secteur"[style]="{'minWidth': '14rem'}"></p-dropdown>
+  </div>
+
 </div>
 </form>
 
