--- a/src/app/pages/formsociete/formsociete.component.html
+++ b/src/app/pages/formsociete/formsociete.component.html
@@ -35,10 +35,6 @@
     <input id="site" type="text" rows="1" pInputText [(ngModel)]="employeur.site_web" name="site" #site="ngModel" required>
   </div>
   <div class="p-field p-col-12 p-md-3">
-    <label for="adresse">adresse</label>
-    <input id="adresse" type="text" pInputText [(ngModel)]="employeur.adresse" name="adresse" #adresse="ngModel" required>
-  </div>
-  <div class="p-field p-col-12 p-md-3">
     <label for="telephone">telephone</label>
     <input type="number" id="telephone" pInputText [(ngModel)]="employeur.telephone" name="telephone" #telephone="ngModel" required pTooltip="Le numero doit être composé de 8 chiffres" tooltipPosition="right" tooltipEvent="focus" showDelay="1000" hideDelay="500">
     <!--<input id="telephone" type="number" pInputText min="71000000" [(ngModel)]="employeur.telephone" name="telephone" #telephone="ngModel" required pTooltip="Le numero doit être composé de 8 chiffres" tooltipPosition="right" tooltipEvent="focus" showDelay="1000" hideDelay="500">-->
@@ -46,14 +42,36 @@
   <div class="p-field p-col-12 p-md-3">
     
     <label for="desc">Description Entreprise</label>
-    <textarea id="desc" [rows]="1" [cols]="30" pInputTextarea autoResize="autoResize" [(ngModel)]="employeur.description_entreprise" name="desc" #desc="ngModel" required></textarea>
+    <textarea id="desc" [rows]="3" [cols]="30" pInputTextarea autoResize="autoResize" [(ngModel)]="employeur.description_entreprise" name="desc" #desc="ngModel" required></textarea>
     <!--<input id="desc" type="text" pInputText [(ngModel)]="employeur.description_entreprise" name="desc" #desc="ngModel" required>-->
   </div>
 
   <div class="p-field p-col-12 p-md-3">
     <p-dropdown [options]="secteurs" [(ngModel)]="secteur" placeholder="Choisissez un secteur d'activités" name="secteur" optionLabel="secteur"[style]="{'minWidth': '14rem'}"></p-dropdown>
   </div>
+ 
+    <div class="p-field p-col-12 p-md-3">
+      <label for="pays">Pays</label>
+      <input id="pays" type="text" rows="1" pInputText [(ngModel)]="employeur.adresse.pays" name="pays" #pays="ngModel" required>
+    </div>
+    <div class="p-field p-col-12 p-md-3">
+      <label for="governat">Governat</label>
+      <input id="governat" type="text" pInputText [(ngModel)]="employeur.adresse.governat" name="governat" #governat="ngModel" required>
+    </div>
+    <div class="p-field p-col-12 p-md-3">
+      <label for="ville">Ville</label>
+      <input id="ville" type="text" rows="1" pInputText [(ngModel)]="employeur.adresse.ville" name="ville" #ville="ngModel" required>
+    </div>
 
+  <div class="p-field p-col-12 p-md-3">
+    <label for="adresse">Adresse</label>
+    <input id="adresse" type="text" pInputText [(ngModel)]="employeur.adresse.adresse" name="adresse" #adresse="ngModel" required>
+  </div>
+
+  <div class="p-field p-col-12 p-md-3">
+    <label for="code_postal">Code postal</label>
+    <input id="code_postal" type="number" pInputText [(ngModel)]="employeur.adresse.code_postal" name="code_postal" #code_postal="ngModel" required>
+  </div>
 </div>
 </form>
 
