--- a/src/app/pages/form-candidat/form-candidat.component.html
+++ b/src/app/pages/form-candidat/form-candidat.component.html
@@ -37,5 +37,5 @@
     </div>
   </form>
 
-  <button class="big-button" (click)="ajouter()" [disabled]="nom.invalid || email.invalid">Submit</button>
+  <button class="big-button" (click)="ajouter()" [disabled]="nom.invalid || email.invalid">S'inscrire</button>
 </div>
