--- a/src/app/pages/formsociete/formsociete.component.html
+++ b/src/app/pages/formsociete/formsociete.component.html
@@ -75,5 +75,5 @@
 </div>
 </form>
 
-<button class="big-button" (click)="ajouter()" [disabled]="nom.invalid">Submit</button>
+<button class="big-button" (click)="ajouter()" [disabled]="nom.invalid">S'inscrire</button>
 </div>
