--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
-<div *ngIf="isAdmin(), else user">
+<div *ngIf="isAdmin() , employeur">
   <app-admin></app-admin>
+</div>
+<div #employeur *ngIf="isEmployeur() , else user">
+  <app-home></app-home>
 </div>
 <ng-template #user>
   <app-official-nav-and-search></app-official-nav-and-search>
