--- a/src/app/pages/societe-cards/societe-cards.component.html
+++ b/src/app/pages/societe-cards/societe-cards.component.html
@@ -2,7 +2,9 @@
 
 <p-card header="{{i.nom_entreprise}}" subheader="{{i.site_web}}"  [style]="{width: '300px'}" styleClass="p-card-shadow p" *ngFor="let i of employeurs">
   <ng-template pTemplate="header">
-    <img alt="Card" src="https://m.media-amazon.com/images/I/51nX7PBmzIL._SS500_.jpg" width="150px">
+    <!--<img alt="Card" src="https://m.media-amazon.com/images/I/51nX7PBmzIL._SS500_.jpg" width="150px">-->
+    <img alt="Card" src="{{i.logo}}" width="150px">
+
   </ng-template>
   <p>{{i.description_entreprise}}</p>
   <ng-template pTemplate="footer"  >
