--- a/src/app/pages/employeur/home/home.component.css
+++ b/src/app/pages/employeur/home/home.component.css
@@ -19,7 +19,7 @@
   left: 0;
   top: 0;
   height: 100%;
-  background-color: #00A4E5;
+  background-color: #f7d9d9;
   z-index: 100;
 }
 .main-content{
@@ -29,7 +29,7 @@
 .sidebar-brand {
   height: 90px;
   padding: 1rem 0rem 1rem 2rem;
-  color: #fff;
+  color: #8390A2;
 }
 
 .sidebar-brand span{
@@ -44,7 +44,7 @@
 }
 .sidebar-menu a {
   display: block;
-  color: white;
+  color: 8390A2;
   font-size: 1.1rem;
   padding-left: 1rem;
 }
@@ -58,7 +58,7 @@
   background: white;
   padding-top: 1rem ;
   padding-bottom: 1rem;
-  color: #00A4E5;
+  color: #f7d9d9;
   border-radius: 30px 0px 0px 30px;
 }
 
@@ -143,14 +143,14 @@ main {
 .card-single {
   display: flex;
   justify-content: space-between;
-  background: white;
+  background: 8390A2;
   padding: 2rem;
   border-radius: 2px;
 }
 
 .card-single div:last-child span{
   font-size: 3rem;
-  color: #00A4E5;
+  color: #f7d9d9;
 
 }
 
