--- a/src/app/pages/employeur/home/home.component.css
+++ b/src/app/pages/employeur/home/home.component.css
@@ -19,7 +19,7 @@
   left: 0;
   top: 0;
   height: 100%;
-  background-color: #f7d9d9;
+  background-color: #3039b8;
   z-index: 100;
 }
 .main-content{
@@ -29,7 +29,7 @@
 .sidebar-brand {
   height: 90px;
   padding: 1rem 0rem 1rem 2rem;
-  color: #8390A2;
+  color: #bfcada;
 }
 
 .sidebar-brand span{
@@ -43,8 +43,9 @@
   padding-left: 2rem;
 }
 .sidebar-menu a {
+  cursor: pointer;
   display: block;
-  color: 8390A2;
+  color: #bcc9d1;
   font-size: 1.1rem;
   padding-left: 1rem;
 }
@@ -58,7 +59,8 @@
   background: white;
   padding-top: 1rem ;
   padding-bottom: 1rem;
-  color: #f7d9d9;
+  font-weight: bold;
+  color: #3039b8;
   border-radius: 30px 0px 0px 30px;
 }
 
@@ -70,6 +72,7 @@ header{
   position: fixed;
   left: 345px;
   width: calc(100% - 345px);
+  background-color: #ffffff;
   top: 0;
   z-index: 100;
 }
