Fixed modifying profile employeur and adding offres

--- a/src/app/pages/employeur/home/home.component.html
+++ b/src/app/pages/employeur/home/home.component.html
@@ -36,6 +36,8 @@
 
   </header>
   <main>
+    <h1>  THIS IS JNAYYEH, you must add languages and offre types to have them show up in the offer selection shit</h1>
+    <h2> This Jnayeh warning is being displayed from the employeur home component and Why TF is the adding offre component named welcome ? </h2>
     <router-outlet></router-outlet>
   </main>
 </div>
