--- a/src/app/pages/employeur/home/home.component.html
+++ b/src/app/pages/employeur/home/home.component.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="user-wrapper">
-      <img src="{{employeur.logo}}" width="40px" height="40px">
+      <img (click)="signOut()" src="{{employeur.logo}}" width="40px" height="40px">
       <div>
         <h4>{{employeur.nom}}</h4>
         <small>{{employeur.telephone}}</small>
